--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,34 +1,65 @@
-body {
-    margin: 0;
-  }
+
+.navbar {
+  display: flex;
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(121, 3, 255);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  position: sticky;
   
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  
+}
+
+.navbar-brand {
+  margin-right: auto;
+  color: aliceblue;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+}
+
+/* Regular nav links */
+.nav-link {
+  color: aliceblue;
+  text-decoration: none;
+  margin: 0 24px;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+}
+
+/* RESPONSIVE */
+@media (max-width: 768px) {
   .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(121, 3, 255);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
-    position: sticky;
-    top: 0;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
-  .navbar-brand {
-    margin-right: auto;
-  }
-  
+
   .navbar-links {
-    display: flex;
-    align-items: center;
+    flex-direction: column;
+    width: 100%;
   }
-  
+
   .nav-link {
-    color: aliceblue;
-    text-decoration: none;
-    margin: 0 24px;
+    margin: 0.5rem 0;
+    font-size: 16px;
   }
-  
-  .nav-link:hover {
-    text-decoration: underline;
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    font-size: 16px;
   }
+
+  .nav-link {
+    font-size: 14px;
+  }
+}
