--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-gray-800 text-white py-8 mt-auto">
+<footer class="bg-gray-800 text-white py-8">
   <div class="container mx-auto px-4">
     <div class="md:flex md:justify-between md:gap-8 space-y-8 md:space-y-0">
       <!-- Logo and Newsletter -->
