--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,23 +26,25 @@
     <%= yield :recaptcha_script %>
   </head>
 
-  <body>
+  <body class="pt-16 flex flex-col min-h-screen">
     <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
       <%= render "layouts/navbar" %>
     <% end %>
 
-    <div class="flash-messages">
-      <% if notice %>
-        <p class="notice bg-green-500 text-white p-4 rounded-md"><%= notice %></p>
-      <% end %>
-      <% if alert %>
-        <p class="alert bg-red-500 text-white p-4 rounded-md"><%= alert %></p>
-      <% end %>
+    <div class="flex-grow">
+      <div class="flash-messages">
+        <% if notice %>
+          <p class="notice bg-green-500 text-white p-4 rounded-md"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="alert bg-red-500 text-white p-4 rounded-md"><%= alert %></p>
+        <% end %>
+      </div>
+
+      <%= yield %>
+
+      <div id="autosuggestion-container" class="autosuggestion-container"></div>
     </div>
-
-    <%= yield %>
-
-    <div id="autosuggestion-container" class="autosuggestion-container"></div>
 
     <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
       <%= render "layouts/footer" %>
