--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,6 +42,28 @@
           </h1>
           <p class="text-gray-600 mb-1"><%= @user.display_name %></p>
           <p class="text-sm text-gray-500 mb-2">@<%= @user.username %></p>
+
+          <div class="flex space-x-4 mt-2">
+            <div class="text-center">
+              <p class="font-bold text-lg"><%= @user.followers.count %></p>
+              <p class="text-sm text-gray-600">Followers</p>
+            </div>
+            <div class="text-center">
+              <p class="font-bold text-lg"><%= @user.following.count %></p>
+              <p class="text-sm text-gray-600">Following</p>
+            </div>
+          </div>
+
+          <% unless @is_own_profile %>
+            <div class="mt-4">
+              <% if current_user.following?(@user) %>
+                <%= button_to "Unfollow", unfollow_user_path(@user), method: :delete, class: "bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600" %>
+              <% else %>
+                <%= button_to "Follow", follow_user_path(@user), method: :post, class: "bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600" %>
+              <% end %>
+            </div>
+          <% end %>
+
           <% if @user.country.present? %>
             <p class="text-sm text-gray-500 mb-2">Country: <%= Carmen::Country.coded(@user.country).name %></p>
           <% end %>
@@ -67,7 +89,7 @@
           <!-- Add Location Form (hidden by default) -->
           <% if @is_own_profile %>
             <div id="location-form" class="hidden mb-4">
-              <%= form_with url: add_tag_profile_path(@user), method: :post, local: true, class: "space-y-2" do |f| %>
+              <%= form_with url: add_tag_profile_path, method: :post, local: true, class: "space-y-2" do |f| %>
                 <%= hidden_field_tag :tag_type, 'location' %>
                 <%= text_field_tag :tag_name, nil,
                                    id: "location_tag_input",
@@ -113,7 +135,7 @@
           <!-- Add Profession Form (hidden by default) -->
           <% if @is_own_profile %>
             <div id="profession-form" class="hidden mb-4">
-              <%= form_with url: add_tag_profile_path(@user), method: :post, local: true, class: "space-y-2" do |f| %>
+              <%= form_with url: add_tag_profile_path, method: :post, local: true, class: "space-y-2" do |f| %>
                 <%= hidden_field_tag :tag_type, 'profession' %>
                 <%= text_field_tag :tag_name, nil,
                                    id: "profession_tag_input",
@@ -252,7 +274,7 @@
           const tagType = this.getAttribute('data-tag-type');
           
           if (confirm('Are you sure you want to remove this tag?')) {
-            fetch('<%= remove_tag_profile_path(@user) %>', {
+            fetch('<%= remove_tag_profile_path %>', {
               method: 'DELETE',
               headers: {
                 'Content-Type': 'application/json',
