--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="message-row <%= message.user == current_user ? 'sent' : 'received' %>">
+<div class="message-row <%= is_current_user_message ? 'sent' : 'received' %>">
   <div class="message-bubble">
     <%= message.body %>
   </div>
