--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,13 @@
 <div class="message-row <%= is_current_user_message ? 'sent' : 'received' %>">
-  <div class="message-bubble">
-    <%= message.body %>
+  <div class="message-content">
+    <div class="message-sender-name">
+      <%= message.user.display_name %>
+    </div>
+    <div class="message-bubble">
+      <%= message.body %>
+    </div>
+    <div class="message-timestamp">
+      <%= message.created_at.strftime("%b %d, %Y %H:%M") %>
+    </div>
   </div>
 </div>
